--- a/Binary_Search_Trees/BST_Traversal_Order.ipynb
+++ b/Binary_Search_Trees/BST_Traversal_Order.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ae3c8f6",
+   "id": "411b7197",
    "metadata": {},
    "source": [
     "There are three traversal orders during the Breadth First Search (BFS) of the Binary Search Tree (BST). They are: \n",
@@ -28,26 +28,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d2e2f9f",
+   "id": "5801d4b7",
    "metadata": {},
    "source": [
-    "**Pre-order traversal**: \\\n",
+    "**Pre-order traversal**: \n",
     "* Traversal sequence: 6 -> 1 -> 0 -> 3 -> 2 -> 5 -> 4 -> 8 -> 7 -> 10 -> 9\n",
-    "* Traversal pattern: If the roots need to be explored before moving on to the leaves\n",
+    "* Traversal pattern: It is a top-down recursive traversal approach. If the roots need to be explored before moving on to the leaves.\n",
+    "* Use case: Used to create a replica of a tree. Also used to print out the hierarchical format of the tree in a linear format. \n",
     "\n",
-    "**In-order traversal**: \\\n",
+    "**In-order traversal**: \n",
     "* Traversal sequence: 0 -> 1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 8 -> 9 -> 10\n",
     "* Traversal pattern: If the tree has to be flattened into its original sequence. Unwinds the tree back into the sequence which was used to create it. \n",
+    "* Use case: Used to get the value of the nodes in a non-decreasing order.\n",
     "\n",
-    "**Post-order traversal**: \\\n",
+    "**Post-order traversal**: \n",
     "* Traversal sequence: 0 -> 2 -> 4 -> 5 -> 3 -> 1 -> 7 -> 9 -> 10 -> 8 -> 6\n",
-    "* Traversal pattern: If all the leaves need to be explored before "
+    "* Traversal pattern: It is a bottom-up recursive traversal approach. If all the leaves need to be explored before. \n",
+    "* Use case: Used to delete a tree from leaf to root. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "734e4cea",
+   "id": "db138e2b",
    "metadata": {},
    "outputs": [],
    "source": []
