--- a/Array/Basic_Array_Utilities.ipynb
+++ b/Array/Basic_Array_Utilities.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "96e08547",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "86e5fbab",
    "metadata": {},
    "outputs": [
@@ -69,45 +69,124 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before Reversal:  [2, 9, 19, 7, 15, 3, 10, 21]\n",
-      "After Reversal:  [21, 10, 3, 15, 7, 19, 9, 2]\n",
-      "Reverse back the reversed A:\n",
       "Before Reversal:  [21, 10, 3, 15, 7, 19, 9, 2]\n",
-      "After Reversal:  [2, 9, 19, 7, 15, 3, 10, 21]\n"
+      "After Reversal:  [2, 9, 19, 7, 15, 3, 10, 21]\n",
+      "Reverse back the reversed A2:\n",
+      "Before Reversal:  [2, 9, 19, 7, 15, 3, 10, 21]\n",
+      "After Reversal:  [21, 10, 3, 15, 7, 19, 9, 2]\n"
      ]
     }
    ],
    "source": [
-    "reverse(A)\n",
-    "print(\"Reverse back the reversed A:\")\n",
-    "reverse(A)"
+    "A2 = A.copy()\n",
+    "reverse(A2)\n",
+    "print(\"Reverse back the reversed A2:\")\n",
+    "reverse(A2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63ec5c51",
+   "metadata": {},
+   "source": [
+    "## Binary search in a sorted Array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8ea4d3c8",
+   "execution_count": 12,
+   "id": "4eb80e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binarySearch(array, target):\n",
+    "    \n",
+    "    def binarySearchUtil(start, end):\n",
+    "        if start > end:\n",
+    "            return -1\n",
+    "        mid = start + (end-start)//2\n",
+    "        if target < array[mid]:\n",
+    "            return binarySearchUtil(start, mid-1)\n",
+    "        elif target > array[mid]:\n",
+    "            return binarySearchUtil(mid+1, end)\n",
+    "        else:\n",
+    "            return mid\n",
+    "        \n",
+    "    return binarySearchUtil(0, len(array)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f02c352e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2, 9, 19, 7, 15, 3, 10, 21]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "7\n",
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "A"
+    "Asort = sorted(A)\n",
+    "print(binarySearch(Asort, 2))\n",
+    "print(binarySearch(Asort, 21))\n",
+    "print(binarySearch(Asort, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26547014",
+   "metadata": {},
+   "source": [
+    "## Check if an Array is sorted or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "59fe5de3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkSorted(array):\n",
+    "    \n",
+    "    def checkSortedUtil(n):\n",
+    "        if n == 0:\n",
+    "            return True\n",
+    "        return (array[n-1] < array[n]) & checkSortedUtil(n-1)\n",
+    "    \n",
+    "    return checkSortedUtil(len(array)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c3dfeff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(checkSorted(A))\n",
+    "print(checkSorted(Asort))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb80e06",
+   "id": "ddbbf393",
    "metadata": {},
    "outputs": [],
    "source": []
