--- a/Binary_Search_Trees/BST_Traversal_Order.ipynb
+++ b/Binary_Search_Trees/BST_Traversal_Order.ipynb
@@ -5,6 +5,7 @@
    "id": "1360bb6b",
    "metadata": {},
    "source": [
+    "## Introduction\n",
     "There are three traversal orders during the Breadth First Search (BFS) of the Binary Search Tree (BST). They are: \n",
     "1. Pre-order Traversal\n",
     "2. In-order Traversal\n",
