--- a/Recursion/N_Queens.ipynb
+++ b/Recursion/N_Queens.ipynb
@@ -1,9 +1,79 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "34e8389a",
+   "metadata": {},
+   "source": [
+    "## N-Queens Problem:\n",
+    "\n",
+    "The objective of the problem is to find out the ways in which N Queens can be placed in a NxN chessboard such that they don't kill each other. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "c57d9e82",
+   "execution_count": 6,
+   "id": "92903796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class solveNQueens:\n",
+    "    \n",
+    "    def __init__(self, n: int): \n",
+    "        self.n = n\n",
+    "        self.board = [['.']*n for i in range(n)]\n",
+    "        # board = [['.']*n]*n Why not to use this? \n",
+    "        \n",
+    "        \n",
+    "    def placeQueens(self):\n",
+    "        print('Start: ', self.board)\n",
+    "        self.__placeQueens(0)\n",
+    "        print('End: ', self.board)        \n",
+    "    \n",
+    "    def __placeQueens(self, row):\n",
+    "        for  col in range(self.n):\n",
+    "            safetyFlag = self.isSafe(row, col)\n",
+    "            if safetyFlag:\n",
+    "                self.board[row][col] = 'Q'\n",
+    "                row += 1\n",
+    "                if row == self.n:\n",
+    "                    print('Bingo! ', self.board)\n",
+    "                else:\n",
+    "                    self.__placeQueens(row)\n",
+    "                row -= 1\n",
+    "                self.board[row][col] = '.'\n",
+    "\n",
+    "    def isSafe(self, row, col):\n",
+    "        \n",
+    "        i, j = row-1, col\n",
+    "        while i >= 0:\n",
+    "            if self.board[i][j] == 'Q':\n",
+    "                return False\n",
+    "            i -= 1\n",
+    "\n",
+    "        i, j = row-1, col-1\n",
+    "        while (i >= 0) and (j >= 0):\n",
+    "            if self.board[i][j] == 'Q':           \n",
+    "                return False\n",
+    "            i -= 1\n",
+    "            j -= 1\n",
+    "\n",
+    "        i, j = row-1, col+1\n",
+    "        while (i >= 0) and (j < len(self.board[0])):\n",
+    "            if self.board[i][j] == 'Q':\n",
+    "                return False\n",
+    "            i -= 1\n",
+    "            j += 1\n",
+    "\n",
+    "        return True\n",
+    "                \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a819b8fa",
    "metadata": {},
    "outputs": [
     {
@@ -26,66 +96,14 @@
     }
    ],
    "source": [
-    "def isSafe(board, row, col):\n",
-    "    i, j = row-1, col\n",
-    "    while i >= 0:\n",
-    "        if board[i][j] == 'Q':\n",
-    "            return False\n",
-    "        i -= 1\n",
-    "        \n",
-    "    i, j = row-1, col-1\n",
-    "    while (i >= 0) and (j >= 0):\n",
-    "        if board[i][j] == 'Q':           \n",
-    "            return False\n",
-    "        i -= 1\n",
-    "        j -= 1\n",
-    "    \n",
-    "    i, j = row-1, col+1\n",
-    "    while (i >= 0) and (j < len(board[0])):\n",
-    "        if board[i][j] == 'Q':\n",
-    "            return False\n",
-    "        i -= 1\n",
-    "        j += 1\n",
-    "        \n",
-    "    return True\n",
-    "\n",
-    "def placeQueens(board, n, row):\n",
-    "    for  col in range(n):\n",
-    "        safetyFlag = isSafe(board, row, col)\n",
-    "        if safetyFlag:\n",
-    "            board[row][col] = 'Q'\n",
-    "            row += 1\n",
-    "            if row == n:\n",
-    "                print('Bingo! ', board)\n",
-    "            else:\n",
-    "                placeQueens(board, n, row)\n",
-    "            row -= 1\n",
-    "            board[row][col] = '.'\n",
-    "        \n",
-    "\n",
-    "def solveNQueens(n: int):\n",
-    "    solutions = []\n",
-    "    # board = [['.']*n]*n Why not to use this? \n",
-    "    board = []\n",
-    "    for i in range(n):\n",
-    "        row = []\n",
-    "        for j in range(n):\n",
-    "            row.append('.')\n",
-    "        board.append(row)\n",
-    "        \n",
-    "    print('Start: ', board)\n",
-    "    placeQueens(board, n, 0)\n",
-    "    print('End: ', board)\n",
-    "    \n",
-    "               \n",
-    "    \n",
-    "solveNQueens(5)"
+    "nqueens = solveNQueens(5)\n",
+    "nqueens.placeQueens()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1ab8da",
+   "id": "9a10c492",
    "metadata": {},
    "outputs": [],
    "source": []
