--- a/Recursion/N_Queens.ipynb
+++ b/Recursion/N_Queens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "34e8389a",
+   "id": "b91e6945",
    "metadata": {},
    "source": [
     "## N-Queens Problem:\n",
@@ -101,9 +101,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c20dbad7",
+   "metadata": {},
+   "source": [
+    "### Why not to use [['.']\\*n]\\*n ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "16790135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 0: 0x7f4af0ad9b40\n",
+      "Row 1: 0x7f4af0ad9b40\n",
+      "Row 2: 0x7f4af0ad9b40\n",
+      "Row 3: 0x7f4af0ad9b40\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 4\n",
+    "board1 = [['.']*n]*n\n",
+    "for i, row in enumerate(board1):\n",
+    "    print(f'Row {i}: {hex(id(row))}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "80cd2c66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 0: 0x7f4af0ae4e80\n",
+      "Row 1: 0x7f4af0ae52c0\n",
+      "Row 2: 0x7f4af0ad99c0\n",
+      "Row 3: 0x7f4af0ae5100\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 4\n",
+    "board2 = [['.']*n for i in range(n)]\n",
+    "for i, row in enumerate(board2):\n",
+    "    print(f'Row {i}: {hex(id(row))}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a10c492",
+   "id": "5965255b",
    "metadata": {},
    "outputs": [],
    "source": []
