--- a/Dynamic_Programming/Fibonacci_series.ipynb
+++ b/Dynamic_Programming/Fibonacci_series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "27e41b36",
+   "id": "8106b71e",
    "metadata": {},
    "source": [
     "## Top down approach:\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1084aaef",
+   "id": "207b6a0d",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3846c2c",
+   "id": "2655a4c1",
    "metadata": {},
    "source": [
     "## Bottom up approach:\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3f8e5f2c",
+   "id": "ba2beddf",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddaa9b4",
+   "id": "40fc6777",
    "metadata": {},
    "source": [
     "## Constant space Bottom up approach:\n",
@@ -105,8 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "e166227c",
+   "execution_count": 37,
+   "id": "82c1f6ab",
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +126,7 @@
     "    return b\n",
     "\n",
     "n = 12\n",
+    "table = {}\n",
     "solution = fibonacci_bu(n)\n",
     "print(f\"Fibonacci value at {n}th position: {solution}\")\n",
     "print(table)"
